--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
  <!-- Leaderboard Section -->
  <section class="text-center py-9 px-2">
   <h2 class="text-2xl font-bold mb-10">Leaderboard Of The Week</h2>
-  <div class="flex justify-center gap-8 items-end mb-8">
+<div class="flex flex-col sm:flex-row justify-center gap-8 items-center sm:items-end mb-8">
     <!-- 2nd Place -->
     <div class="bg-white rounded-xl shadow-md p-6 w-40">
       <img src="FotoHome/kopken.png" alt="Kopi Kenangan" class="mx-auto h-12 mb-3" />
