--- a/event-detail.html
+++ b/event-detail.html
@@ -21,8 +21,10 @@
       <li><a href="promo.html" class="text-gray-600 hover:text-pink-500">Promo</a></li>
       <li><a href="about.html" class="text-gray-600 hover:text-pink-500">About Us</a></li>
     </ul>
-    <div class="flex items-center space-x-4 relative">
-      <img src="FotoHome/avatar.jpg" class="h-8 w-8 rounded-full" alt="User" />
+<div class="flex items-center space-x-4 relative">
+  <a href="profile.html">
+    <img src="FotoHome/avatar.jpg" class="h-8 w-8 rounded-full cursor-pointer" alt="User" />
+  </a>
       <div class="relative">
         <button id="notifBtn" class="relative">
           <i class="fas fa-bell text-xl text-gray-600"></i>
