--- a/leaderboard.html
+++ b/leaderboard.html
@@ -23,7 +23,9 @@
     </ul>
 <!-- User Section dengan Notifikasi -->
 <div class="flex items-center space-x-4 relative">
-  <img src="FotoHome/avatar.jpg" class="h-8 w-8 rounded-full" alt="User" />
+  <a href="profile.html">
+    <img src="FotoHome/avatar.jpg" class="h-8 w-8 rounded-full cursor-pointer" alt="User" />
+  </a>
 
   <!-- Button Notifikasi -->
   <div class="relative">
