--- a/login.html
+++ b/login.html
@@ -27,7 +27,11 @@
     <div class="max-w-md w-full bg-white rounded-2xl shadow-xl p-8 md:p-8 space-y-6">
       <div class="text-center space-y-2">
         <h2 class="text-2xl font-semibold">Selamat Datang di Mokafe!</h2>
-        <p class="text-sm text-gray-500">Gabung dan nikmati kopi yang lebih personal dengan akun Mokafe kamu.</p>
+        <p class="text-sm text-gray-500 my-4">
+          Bergabunglah dengan keluarga MoKafe! 
+          Nikmati pengalaman kopi yang lebih personal dengan akun MoKafe-mu.
+        </p>
+
       </div>
 
       <div class="space-y-5">
